<resources>
    <string name="I_agree">我已阅读并同意</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_appeal">账号申诉</string>
    <string name="account_appeal_header">以上方法不可行，您还可以尝试</string>
    <string name="account_cancellation">账号注销</string>
    <string name="account_error">账户不存在</string>
    <string name="account_manager">账号管理</string>
    <string name="account_not_regiest">账号未注册</string>
    <string name="account_token_expired">账号登录信息过期，请重新登录</string>
    <string name="acct_expired">账号已过期，请重新登陆</string>
    <string name="achievement_acct_changed">账号发生变动</string>
    <string name="achievement_acct_logout">账号已退出</string>
    <string name="achievement_badge_canobtain_point">可获得成就点: %s成就点</string>
    <string name="achievement_bar_desc_progress">%1$s（%2$s/%3$s）</string>
    <string name="achievement_bar_point">%s点成长点</string>
    <string name="achievement_detail_scene_one_detail">@string/achievement_bar_desc_progress</string>
    <string name="achievement_detail_scene_two_click_exit">任意点击即可关闭</string>
    <string name="achievement_detail_scene_two_detail_icon">%s徽章</string>
    <string name="achievement_detail_scene_two_detail_point">@string/achievement_bar_point</string>
    <string name="achievement_detail_scene_two_title">恭喜获得</string>
    <string name="achievement_name_level">Lv.</string>
    <string name="achievement_obtain_badge">已获得 %s 枚徽章</string>
    <string name="achievement_point">成就点：%s</string>
    <string name="achievement_raise_goodwill">提升好感度等级</string>
    <string name="achievement_tips_login">登录nubia账号即可开启成就</string>
    <string name="achievement_title">成就</string>
    <string name="achievement_title_unactive">成就未开启</string>
    <string name="agreement">用户协议</string>
    <string name="alarm_add">添加闹钟</string>
    <string name="alarm_black_space" />
    <string name="alarm_date">M月d日 EEEE</string>
    <string name="alarm_day_concat">、</string>
    <string name="alarm_delete">删除闹钟</string>
    <string name="alarm_editor">编辑闹钟</string>
    <string name="alarm_input_label">请输入10字内的备注</string>
    <string name="alarm_input_label_cancel">取消</string>
    <string name="alarm_input_label_commit">确定</string>
    <string name="alarm_input_label_title">添加备注</string>
    <string name="alarm_label">备注</string>
    <string name="alarm_redmagickyi">魔姬闹钟</string>
    <string name="alarm_repeat_every_day">每天</string>
    <string name="alarm_repeat_model">重复</string>
    <string name="alarm_repeat_ten">%d分钟后再响</string>
    <string name="alarm_repeat_tip">点击%d分钟后再响</string>
    <string name="alarm_ring_and_action">闹钟铃声和动作</string>
    <string name="alarm_ring_custom">自定义</string>
    <string name="alarm_ring_one_time">只响一次</string>
    <string name="alarm_time_day">日</string>
    <string name="alarm_title">闹钟</string>
    <string name="alarm_type">类型</string>
    <string name="alarm_type_select">选择闹钟类型</string>
    <string name="alarm_upsilde_cancel">向上滑动关闭闹钟</string>
    <string name="alarm_voice_tip1">醒醒～执行官～你该起床去完成你的任务啦！赖床的孩子会被讨厌的哦！</string>
    <string name="alarm_voice_tip2">诶！怎么还没起来啊，错过了大事可不要怪我哦！</string>
    <string name="alarm_voice_tip3">唔~唔~！我要生气了，最后给你5秒钟，再不起来，不管你了！</string>
    <string name="all_space_invalid">账户名无效</string>
    <string name="allow_permissions">"欢迎使用红魔姬，为了向您提供更好的服务，在使用过程中，需要以下权限： 
\t\t联网：本软件需要网络访问权限，包括%s，所产生的流量费用将由运营商直接收取，详情咨询您所属的运营商; 
\t\t位置：通过地理位置获取天气和附近无线网络信息; 
\t\t媒体存储：通过开启手机本地存储权限，用于保存数据等; 
\t\t相机：更新头像、开启直播需要获取该权限; 
使用本软件即表示你已阅读并同意"</string>
    <string name="and">和</string>
    <string name="androidx_camera_default_config_provider">androidx.camera.camera2.Camera2Config$DefaultProvider</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">oss-android-sdk</string>
    <string name="app_start_commit_accept">同意</string>
    <string name="app_start_commit_cancel">取消</string>
    <string name="app_start_identify_birth">请选择生日</string>
    <string name="app_start_identify_reg">指挥官身份识别</string>
    <string name="app_start_identify_reg_btn">识别认证</string>
    <string name="app_start_visual_agree">确定</string>
    <string name="app_start_visual_setting">其他系统设定</string>
    <string name="app_start_visual_setting_main_screen_set_icon">创建桌面快捷方式</string>
    <string name="app_start_visual_setting_open_redmagickyi">启用互动桌面</string>
    <string name="app_start_visual_setting_open_redmagickyi_care">启用魔姬关怀</string>
    <string name="app_version_update_dialog_detail_downloaded">"监测到有新的更新包，是否更新？
（更新前仅支持使用基础功能）"</string>
    <string name="app_version_update_dialog_title">应用更新</string>
    <string name="app_version_update_layout_ready_title">应用待更新</string>
    <string name="app_version_update_layout_toast">应用更新前仅支持使用基础功能</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="ar_edit_photo">编辑</string>
    <string name="ar_live_moblie_btn">手机直播</string>
    <string name="ar_live_pc_btn">电脑直播</string>
    <string name="ar_remake_photo">重拍</string>
    <string name="ar_save_photo">保存至相册</string>
    <string name="ar_save_success">保存路径为：</string>
    <string name="ar_select_dialog_sub_text">用虚拟形象或者摄像头进行手机和电脑游戏直播</string>
    <string name="ar_start_live">开始直播</string>
    <string name="ar_start_live_guide_text">"1、在红魔社区下载智慧投屏客户端，下载链接为： 
"<a href="https://www.nubia.com/active/redmagicstudio">https://www.nubia.com/active/redmagicstudio</a>" 
2、使用USB连接电脑与手机 
3、手机上USB连接用途选择多屏协同选项 
4、电脑识别到手机后开始投屏 "</string>
    <string name="bind_phone_hint">请输入手机号码</string>
    <string name="birthday_select">请选择生日</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="cache_code_error">验证码错误</string>
    <string name="can_not_set_future_time">不能设置未来时间</string>
    <string name="cancel">取消</string>
    <string name="care_bubble_mute">语音静音仅聊天气泡</string>
    <string name="care_bubble_open">开启聊天气泡</string>
    <string name="care_mobile_mute">移动数据网络</string>
    <string name="care_network_mute">是否静音</string>
    <string name="care_network_wifi_1">WIFI_1</string>
    <string name="care_network_wifi_2">WIFI_2</string>
    <string name="care_network_wifi_selected">已选：</string>
    <string name="care_scence_frequency_text_all">全部播放</string>
    <string name="care_scence_frequency_text_high">高</string>
    <string name="care_scence_frequency_text_low">低</string>
    <string name="care_scence_frequency_text_min">中</string>
    <string name="care_scence_life">生活</string>
    <string name="care_scence_life_open">生活关怀场景已开启</string>
    <string name="care_scence_study_open">学习关怀场景已开启</string>
    <string name="care_scence_study_work_open">工作/学习关怀场景已开启</string>
    <string name="care_scence_systerm">系统</string>
    <string name="care_scence_systerm_open">系统关怀场景已开启</string>
    <string name="care_scence_use">使用场景</string>
    <string name="care_scence_work_open">工作关怀场景已开启</string>
    <string name="care_scence_work_or_study">工作/学习</string>
    <string name="care_title_tips">mora会根据你所处的环境进行语音/文字关怀，可以设置你想关怀的场景，让mora陪你渡过每一天吧！</string>
    <string name="care_user_type_secret">秘密</string>
    <string name="care_user_type_starff">公司职员</string>
    <string name="care_user_type_student">学生</string>
    <string name="care_wifi_mute">特定网络连接时静音</string>
    <string name="care_wifi_none">无</string>
    <string name="chagne_uesr_phone">修改绑定手机</string>
    <string name="chagne_uesr_phone_success">修改绑定手机成功</string>
    <string name="change_password">更改密码</string>
    <string name="change_password_success">更改密码成功</string>
    <string name="change_skin_desc_2d">"皮肤适配说明：
2d皮肤切换后，魔姬唤醒内形象也会同步更换哦"</string>
    <string name="change_skin_desc_2d_digitalhuman">皮肤适配说明：2d皮肤切换后，魔姬唤醒内形象也会同步更换，并且系统语音的数字人形象会同步更换哦</string>
    <string name="change_skin_desc_2d_noalarm">"皮肤适配说明：
2d皮肤切换后，不会同步更换魔姬唤醒形象哦"</string>
    <string name="change_skin_desc_2d_noalarm_digitalhuman">皮肤适配说明：2d皮肤切换后，不会同步更换魔姬唤醒形象，但是系统语音的数字人形象会同步更换哦</string>
    <string name="change_skin_desc_3d">"皮肤适配说明：
3d皮肤切换后，不会同步更换魔姬唤醒形象哦"</string>
    <string name="change_skin_desc_3d_digitalhuman">皮肤适配说明：3d皮肤切换后，不会同步更换魔姬唤醒形象，但是系统语音的数字人形象会同步更换哦</string>
    <string name="change_skin_dialog_btn_cancel">关闭</string>
    <string name="change_skin_dialog_btn_exchange">兑换</string>
    <string name="change_skin_dialog_btn_exchange_achievement">查看成就</string>
    <string name="change_skin_dialog_btn_exchange_achievement_fail">成就点还不够哦，完成成就任务获取更多成就点哦！</string>
    <string name="change_skin_dialog_btn_exchange_activity">查看活动</string>
    <string name="change_skin_dialog_btn_exchange_activity_expired">兑换码已过期</string>
    <string name="change_skin_dialog_btn_exchange_activity_fail">兑换码不正确</string>
    <string name="comfirm_password">确认密码</string>
    <string name="confirm">确定</string>
    <string name="identifying_code">验证码</string>
    <string name="input_new_password">输入新密码</string>
    <string name="input_old_password">输入旧密码</string>
    <string name="intput_passwd">输入密码</string>
    <string name="mainpage_header_descr">红魔姬在到达百年前的地球时失去了记忆，一直回响在她脑海里的只有一些断断续续的梦境。红魔姬在到达百年前的地球时失去了记忆</string>
    <string name="mainpage_header_fans">魔姬粉丝群</string>
    <string name="mainpage_header_ip">IP：地球</string>
    <string name="mainpage_header_link_bilibili">B站：红魔游戏手机</string>
    <string name="mainpage_header_link_weibo">微博：红魔游戏手机</string>
    <string name="mainpage_header_title">红魔姬Mora</string>
    <string name="mainpage_header_title_sub">a-5#星 魔姬战士</string>
    <string name="new_password">新密码</string>
    <string name="next">获取验证码</string>
    <string name="old_password">旧密码</string>
    <string name="phone">手机</string>
    <string name="phone_number">手机号码</string>
    <string name="plz_input_phone">手机号码</string>
    <string name="privacy">隐私政策</string>
    <string name="privacy_policy">隐私保护政策</string>
    <string name="psw_check_two">密码必须为6-16个字符（数字、字母、符合至少包含两种）</string>
    <string name="register">注册</string>
    <string name="service_item">服务条款</string>
    <string name="sms_identifying_code">短信验证码</string>
    <string name="user_agreement_title_new">服务说明</string>
    <string name="user_authorize_agree_account">同意nubia账户</string>
</resources>