<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/toolbar_view" layout="@layout/nubia_user_layout_toolbar" />
    <RelativeLayout android:id="@id/rl_old_password" android:layout_width="match_parent" android:layout_height="@dimen/ns_62_dp" android:layout_below="@id/toolbar_view">
        <TextView android:textSize="@dimen/ns_16_dp" android:textStyle="bold" android:textColor="@color/color_black_100" android:id="@id/tv_old_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/old_password" android:layout_centerVertical="true" android:layout_marginStart="@dimen/ns_16_dp" />
        <EditText android:textSize="@dimen/ns_14_dp" android:textColor="@color/care_black_100" android:id="@id/input_old_password" android:background="@android:color/transparent" android:layout_width="match_parent" android:layout_height="match_parent" android:hint="@string/input_old_password" android:inputType="textPassword" android:layout_marginStart="@dimen/ns_18_dp" android:layout_toEndOf="@id/tv_old_password" />
        <View android:background="@color/ark_color_gray" android:layout_width="match_parent" android:layout_height="@dimen/ns_1_px" android:layout_alignParentBottom="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/rl_new_password" android:layout_width="match_parent" android:layout_height="@dimen/ns_62_dp" android:layout_below="@id/rl_old_password">
        <TextView android:textSize="@dimen/ns_16_dp" android:textStyle="bold" android:textColor="@color/color_black_100" android:id="@id/tv_new_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/new_password" android:layout_centerVertical="true" android:layout_marginStart="@dimen/ns_16_dp" />
        <EditText android:textSize="@dimen/ns_14_dp" android:textColor="@color/care_black_100" android:id="@id/input_new_password" android:background="@android:color/transparent" android:layout_width="match_parent" android:layout_height="match_parent" android:hint="@string/input_new_password" android:inputType="textPassword" android:layout_marginStart="@dimen/ns_18_dp" android:layout_toEndOf="@id/tv_new_password" />
        <View android:background="@color/ark_color_gray" android:layout_width="match_parent" android:layout_height="@dimen/ns_1_px" android:layout_alignParentBottom="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/rl_confirm_password" android:layout_width="match_parent" android:layout_height="@dimen/ns_62_dp" android:layout_below="@id/rl_new_password">
        <TextView android:textSize="@dimen/ns_16_dp" android:textStyle="bold" android:textColor="@color/color_black_100" android:id="@id/tv_confirm_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/comfirm_password" android:layout_centerVertical="true" android:layout_marginStart="@dimen/ns_16_dp" />
        <EditText android:textSize="@dimen/ns_14_dp" android:textColor="@color/care_black_100" android:id="@id/confirm_password" android:background="@android:color/transparent" android:layout_width="match_parent" android:layout_height="match_parent" android:hint="@string/comfirm_password" android:inputType="textPassword" android:layout_marginStart="@dimen/ns_18_dp" android:layout_toEndOf="@id/tv_confirm_password" />
        <View android:background="@color/ark_color_gray" android:layout_width="match_parent" android:layout_height="@dimen/ns_1_px" android:layout_alignParentBottom="true" />
    </RelativeLayout>
    <TextView android:textSize="@dimen/ns_14_dp" android:textColor="@color/color_black_70" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/ns_18_dp" android:text="@string/psw_check_two" android:layout_below="@id/rl_confirm_password" android:layout_marginStart="@dimen/ns_16_dp" />
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/ns_10_dp" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <Button android:textSize="@dimen/ns_14_dp" android:textColor="@color/color_red_100" android:id="@id/btn_cancel" android:background="@drawable/ns_button_bg1" android:layout_width="@dimen/ns_130_dp" android:layout_height="@dimen/ns_36_dp" android:text="@string/cancel" />
        <Button android:textSize="@dimen/ns_14_dp" android:textColor="@color/color_red_100" android:id="@id/btn_confirm" android:background="@drawable/ns_button_bg1" android:layout_width="@dimen/ns_130_dp" android:layout_height="@dimen/ns_36_dp" android:text="@string/confirm" android:layout_marginStart="@dimen/ns_18_dp" />
    </LinearLayout>
</RelativeLayout>
