<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent" android:layout_height="@dimen/ns_306_dp"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:background="@drawable/mainpage_header_open_bg" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="@dimen/ns_120_dp" />
    <cn.nubia.redmagickyi.guide.view.RoundImageView android:id="@id/iv_header_thumbnail" android:layout_width="@dimen/ns_80_dp" android:layout_height="@dimen/ns_80_dp" android:layout_marginTop="@dimen/ns_98_dp" android:foreground="@drawable/mainpage_header_thumbnail_fg" android:src="@mipmap/mainpage_header_thumbnail" android:layout_marginStart="@dimen/ns_22_dp" app:radius="@dimen/ns_80_dp" />
    <cn.nubia.redmagickyi.view.rtl.AutoMirrorTextView android:textSize="@dimen/ns_11_dp" android:textColor="@color/white_FFFFFFFF" android:background="@drawable/mainpage_header_ip_bg" android:paddingTop="@dimen/ns_3_dp" android:paddingBottom="@dimen/ns_3_dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/ns_94_dp" android:text="@string/mainpage_header_ip" android:paddingStart="@dimen/ns_6_dp" android:paddingEnd="@dimen/ns_6_dp" android:layout_marginEnd="@dimen/ns_16_dp" android:layout_alignParentEnd="true" app:defaultFontTypeface="true" />
    <LinearLayout android:orientation="horizontal" android:id="@id/layout_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/ns_128_dp" android:layout_marginStart="@dimen/ns_116_dp">
        <cn.nubia.redmagickyi.view.rtl.AutoMirrorTextView android:textSize="@dimen/ns_24_dp" android:textColor="@color/mainpage_header_text" android:id="@id/tv_header_open_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mainpage_header_title" app:defaultFontTypeface="true" />
        <ImageView android:layout_gravity="center_vertical" android:layout_width="@dimen/ns_14_dp" android:layout_height="@dimen/ns_14_dp" android:layout_marginTop="@dimen/ns_1_dp" android:src="@drawable/svg_ic_girl" android:layout_marginStart="@dimen/ns_1_dp" />
    </LinearLayout>
    <cn.nubia.redmagickyi.view.rtl.AutoMirrorTextView android:textSize="@dimen/ns_14_dp" android:textColor="@color/mainpage_header_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mainpage_header_title_sub" android:layout_below="@id/layout_name" android:layout_alignStart="@id/layout_name" app:defaultFontTypeface="true" />
    <TextView android:textSize="@dimen/ns_12_dp" android:textColor="@color/mainpage_header_text" android:id="@id/tv_header_descr" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/ns_11_dp" android:minHeight="@dimen/ns_45_dp" android:text="@string/mainpage_header_descr" android:layout_below="@id/iv_header_thumbnail" android:layout_marginStart="@dimen/ns_24_dp" android:layout_marginEnd="@dimen/ns_24_dp" />
    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@id/tv_header_descr" android:paddingStart="@dimen/ns_24_dp" android:paddingEnd="@dimen/ns_20_dp">
        <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <cn.nubia.redmagickyi.view.rtl.AutoMirrorTextView android:textSize="@dimen/ns_11_dp" android:textColor="@color/mainpage_link_text" android:background="@drawable/mainpage_header_link_bg" android:paddingTop="@dimen/ns_2_dp" android:paddingBottom="@dimen/ns_2_dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mainpage_header_link_bilibili" android:drawablePadding="@dimen/ns_4_dp" android:drawableStart="@drawable/svg_ic_bilibili" android:paddingStart="@dimen/ns_3_dp" android:paddingEnd="@dimen/ns_8_dp" app:defaultFontTypeface="true" />
            <cn.nubia.redmagickyi.view.rtl.AutoMirrorTextView android:textSize="@dimen/ns_11_dp" android:textColor="@color/mainpage_link_text" android:background="@drawable/mainpage_header_link_bg" android:paddingTop="@dimen/ns_2_dp" android:paddingBottom="@dimen/ns_2_dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/ns_8_dp" android:text="@string/mainpage_header_link_weibo" android:drawablePadding="@dimen/ns_4_dp" android:drawableStart="@drawable/svg_ic_weibo" android:paddingStart="@dimen/ns_3_dp" android:paddingEnd="@dimen/ns_8_dp" app:defaultFontTypeface="true" />
        </LinearLayout>
        <cn.nubia.redmagickyi.view.MarqueeView.MarqueeButton android:layout_gravity="end|center" android:id="@id/btn_fans" android:text="@string/mainpage_header_fans" style="@style/redmagic_button_commit" />
    </FrameLayout>
</RelativeLayout>
